# MyTools

./: .coverage  .dockerignore  .gitignore  Dockerfile  KNOW_ISSUES.txt  PLAN_ATTACK_ANALYSIS_206_207.txt  README.MD  ROADMAP.txt  attackaudit.py  backupfiledetect.py  cred.py  dirscanner.py  dnsamplification.py  dnshistory.py  dnssecvalidation.py  dnstransfer.py  dnstunnel.py  emailbreachcheck.py  emailsecurity.py  graphqlplayground.py  ipasninfo.py  main.py  net.py  openapidiscovery.py  pasteleak.py  portscanner.py  pyproject.toml  reconall.py  roadmap.txt  setup.ps1  setup.sh  sourcemapdiscovery.py  subdomainenum.py  techfingerprint.py  utils.py  vcsleak.py  web-bugs-plan.txt  webrecon.py  whoishistory.py
.github/workflows/: ci.yml
.opencode/plans/: fix-bugs-from-results.md
src/mytools/: __init__.py
tests/: conftest.py  test_attackaudit.py  test_backupfiledetect.py  test_cred.py  test_dirscanner.py  test_dnsamplification.py  test_dnssecvalidation.py  test_dnstransfer.py  test_dnstunnel.py  test_emailbreachcheck.py  test_emailsecurity.py  test_ipasninfo.py  test_openapidiscovery.py  test_pasteleak.py  test_portscanner.py  test_reconall.py  test_subdomainenum.py  test_utils.py  test_vcsleak.py  test_webrecon.py
tests/config/: test_backupfiledetect.py  test_configfiledetect.py
tests/core/: test_cred.py  test_reconall.py  test_stealth.py  test_utils.py
tests/dns/: test_caacheck.py  test_dnsamplification.py  test_dnshistory.py  test_dnsrebinding.py  test_dnssecvalidation.py  test_dnstransfer.py  test_dnstunnel.py  test_dnswatorture.py  test_dohscan.py  (+3 more)
(+236 files in other folders)
